--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 					<div class="project shadow">
 						<a href="https://devpost.com/software/xchange-agjw38" target="_blank">
 							<img src="images/north.png" class="img-fluid">
+							<hr>
 							<h4>XChange</h4>
 							<p>XChange helps travelers to track their budget in their native currency and locates best exchange station rates in the area using crowd-sourced data.</p>
 						</a>
@@ -71,8 +72,9 @@
 					<div class="project shadow">
 						<a href="https://devpost.com/software/snow-day-alarm" target="_blank">
 							<img src="images/hammer.jpg" class="img-fluid">
+							<hr>
 							<h4>Snow Day Alarm</h4>
-							<p>An alarm that checks the school region's live twitter that automatically disables your alarm on snowdays!</p>
+							<p>An alarm that checks the school region's live twitter and automatically disables your alarm on snowdays!</p>
 						</a>
 					</div>
 				</div>
@@ -80,6 +82,7 @@
 					<div class="project shadow">
 						<a href="https://devpost.com/software/quick-meds" target="_blank">
 							<img src="images/wolf.png" class="img-fluid">
+							<hr>
 							<h4>QuickMeds</h4>
 							<p>An experimental concept of providing a smarter and more efficient way to get in touch with emergency medical services</p>
 						</a>
@@ -95,6 +98,7 @@
 					<div class="project shadow">
 						<a href="https://github.com/AaronZhang314/CodingBuddies" target="_blank"">
 							<img src="images/coding.png" class="img-fluid">
+							<hr>
 							<h4>Coding Buddies</h4>
 							<p>A learning resource that teaches Python for younger programmers</p>
 						</a>
@@ -104,6 +108,7 @@
 					<div class="project shadow">
 						<a href="https://github.com/AaronZhang314/ShapeFriends-Pygame" target="_blank">
 							<img src="images/jump.png" class="img-fluid">
+							<hr>
 							<h4>Shape Friends Pygame</h4>
 							<p>A platformer made in Pygame (Python)</p>
 						</a>
@@ -113,6 +118,7 @@
 					<div class="project shadow">
 						<a href="https://github.com/AaronZhang314/ICS-3UO-Project" target="_blank">
 							<img src="images/minesweeper.jpg" class="img-fluid">
+							<hr>
 							<h4>Minesweeper (C++)</h4>
 							<p>A recreation of the classic game, Minesweeper, played in the C++ console</p>
 						</a>
