Project Description Changes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<img src="images/north.png" class="img-fluid">
 							<hr>
 							<h4>XChange</h4>
-							<p>XChange helps travelers to track their budget in their native currency and locates best exchange station rates in the area using crowd-sourced data.</p>
+							<p>A website helps travelers to track their budget by converting any currency into their native currency and locates best exchange station rates in the area using crowd-sourced data.</p>
 						</a>
 					</div>
 				</div>
@@ -84,7 +84,7 @@
 							<img src="images/wolf.png" class="img-fluid">
 							<hr>
 							<h4>QuickMeds</h4>
-							<p>An experimental concept of providing a smarter and more efficient way to get in touch with emergency medical services</p>
+							<p>An experimental concept of providing a smarter and more efficient way to contact with emergency medical services in extreme situations.</p>
 						</a>
 					</div>
 				</div>
@@ -100,7 +100,7 @@
 							<img src="images/coding.png" class="img-fluid">
 							<hr>
 							<h4>Coding Buddies</h4>
-							<p>A learning resource that teaches Python for younger programmers</p>
+							<p>A learning resource that teaches Python for younger programmers.</p>
 						</a>
 					</div>
 				</div> 
@@ -110,7 +110,7 @@
 							<img src="images/jump.png" class="img-fluid">
 							<hr>
 							<h4>Shape Friends Pygame</h4>
-							<p>A platformer made in Pygame (Python)</p>
+							<p>A platformer made in Pygame (Python) where you go on an adventure to rescue you kidnapped friends!</p>
 						</a>
 					</div>
 				</div>
@@ -120,7 +120,7 @@
 							<img src="images/minesweeper.jpg" class="img-fluid">
 							<hr>
 							<h4>Minesweeper (C++)</h4>
-							<p>A recreation of the classic game, Minesweeper, played in the C++ console</p>
+							<p>A recreation of the classic game, Minesweeper, played in the C++ console.</p>
 						</a>
 					</div>
 				</div>
