Side Nav animate

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 	<div class="container-fluid main">
 		<div class="row">
-			<nav id="sideNav" class="col-lg-2">
+			<nav id="sideNav" class="col-lg-2 wow bounceInLeft" data-wow-delay="0.75s">
 		      <ul class="nav nav-pills flex-column">
 		        <li class="nav-item">
 		          <a id="navGeneral" class="nav-link" href="#general">General</a>
@@ -191,7 +191,7 @@
 			</div>
 		</div>
 	</div>
-	<div style="padding-bottom: 500px">
+	<div style="padding-bottom: 450px">
 	</div>
 	<footer class="container copyright">
     	<hr>
