--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<hr>
 					</div>
 					<div class="row">
-						<div class="col-md-4 wow slideInUp" data-wow-delay="0.2s">
+						<div class="col-md-4 wow fadeIn" data-wow-delay="0.2s">
 							<div class="project shadow">
 								<a href="https://devpost.com/software/xchange-agjw38" target="_blank">
 									<img src="images/north.png" class="img-fluid">
@@ -106,7 +106,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col-md-4 wow slideInUp" data-wow-delay="0.4s">
+						<div class="col-md-4 wow fadeIn" data-wow-delay="0.4s">
 							<div class="project shadow">
 								<a href="https://devpost.com/software/snow-day-alarm" target="_blank">
 									<img src="images/hammer.jpg" class="img-fluid">
@@ -116,7 +116,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col-md-4 wow slideInUp" data-wow-delay="0.6s">
+						<div class="col-md-4 wow fadeIn" data-wow-delay="0.6s">
 							<div class="project shadow">
 								<a href="https://devpost.com/software/quick-meds" target="_blank">
 									<img src="images/wolf.png" class="img-fluid">
@@ -132,7 +132,7 @@
 						<hr>
 					</div>
 					<div class="row"> 
-						<div class="col-md-4 wow slideInUp" data-wow-delay="0.2s">
+						<div class="col-md-4 wow fadeIn" data-wow-delay="0.2s">
 							<div class="project shadow">
 								<a href="https://github.com/AaronZhang314/CodingBuddies" target="_blank"">
 									<img src="images/coding.png" class="img-fluid">
@@ -142,7 +142,7 @@
 								</a>
 							</div>
 						</div> 
-						<div class="col-md-4 wow slideInUp" data-wow-delay="0.4s">
+						<div class="col-md-4 wow fadeIn" data-wow-delay="0.4s">
 							<div class="project shadow">
 								<a href="https://github.com/AaronZhang314/ShapeFriends-Pygame" target="_blank">
 									<img src="images/jump.png" class="img-fluid">
@@ -152,7 +152,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col-md-4 wow slideInUp" data-wow-delay="0.6s">
+						<div class="col-md-4 wow fadeIn" data-wow-delay="0.6s">
 							<div class="project shadow">
 								<a href="https://github.com/AaronZhang314/ICS-3UO-Project" target="_blank">
 									<img src="images/minesweeper.jpg" class="img-fluid">
