--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						<div class="col-md-4 wow fadeIn" data-wow-delay="0.6s">
 							<div class="project shadow">
 								<a href="https://github.com/AaronZhang314/ICS-3UO-Project" target="_blank">
-									<img src="images/minesweeper.jpg" class="img-fluid">
+									<img src="images/minesweeper.png" class="img-fluid">
 									<hr>
 									<h4>Minesweeper (C++)</h4>
 									<p>A recreation of the classic game, Minesweeper, played in the C++ console.</p>
@@ -176,7 +176,7 @@
 					</div>
 					<div style="margin-bottom: 300px">
 					</div>
-					<div id="more" class="wow fadeIn" data-wow-delay="0.5s">
+					<div id="more" class="wow fadeIn" data-wow-delay="0.5s" style="padding-bottom:100px">
 						<h2>More Information</h2>
 						<hr class="headerLine greenHr wow slideInLeft">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
