--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<title>Aaron Zhang</title>
 </head>
 <body data-spy="scroll" data-target="#sideNav" data-offset="50">
-	<div id="showcase">
+	<div id="showcase" class="viginette">
 		<div id="circle" class="wow zoomIn" data-wow-delay="0.3s">
 			<div id="showcaseText">
 				<h1 class="wow rollIn" data-wow-delay="0.5s">Hey There!</h1>
