--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 	</div>
 	<footer class="container copyright">
     	<hr>
-    	<p>&copy; Aaron Zhang 2018</p>
+    	<p><a id="imageLink" href="https://wallpapersite.com/nature/poon-hill-ghorepani-mountains-nepal-sunset-4k-16729.html">Image Source</a></p>
     </footer>
 	
 </body>
