--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<div class="col-md-8 wow fadeIn" data-wow-delay="0.5s">
 							<h2>A Little About Me!</h2>
 							<hr class="headerLine blueHr wow slideInLeft">
-							<p>Hi, I am Aaron Zhang! Currently I am a Grade 12 student attending Glenforest Secondary School. I like to do stuff.</p>
+							<p>Hi, I am Aaron Zhang! Currently I am a Grade 12 student attending Glenforest Secondary School.</p>
 							<h4>Grocery List</h4>
 							<ul>
 								<li>Bananana - to make smoothies</li>
@@ -73,6 +73,7 @@
 								<li>Sharujan</li>
 								<li>More filler text to see if format is nice</li>
 							</ul>
+							
 							<!--
 							<h4>Music</h4>
 							<p>I love playing the piano and have been playing since I was 8. I have taken a number of the higher level RCM examinations and competed in a few music festivals</p>
@@ -92,15 +93,13 @@
 					<div id="projects" class="wow fadeIn" data-wow-delay="0.5s">
 						<h2>My Projects</h2>
 						<hr class="headerLine redHr wow slideInLeft">
-						<h3>Hackathons</h3>
-						<hr>
+						<h3>Hackathons</h3> 
 					</div>
 					<div class="row">
 						<div class="col-md-4 wow fadeIn" data-wow-delay="0.2s">
 							<div class="project shadow">
 								<a href="https://devpost.com/software/xchange-agjw38" target="_blank">
 									<img src="images/north.png" class="img-fluid">
-									<hr>
 									<h4>XChange</h4>
 									<p>A website helps travelers to track their budget by converting any currency into their native currency and locates best exchange station rates in the area using crowd-sourced data.</p>
 								</a>
@@ -110,7 +109,6 @@
 							<div class="project shadow">
 								<a href="https://devpost.com/software/snow-day-alarm" target="_blank">
 									<img src="images/hammer.jpg" class="img-fluid">
-									<hr>
 									<h4>Snow Day Alarm</h4>
 									<p>An alarm that checks the school region's live twitter and automatically disables your alarm on snowdays!</p>
 								</a>
@@ -120,7 +118,6 @@
 							<div class="project shadow">
 								<a href="https://devpost.com/software/quick-meds" target="_blank">
 									<img src="images/wolf.png" class="img-fluid">
-									<hr>
 									<h4>QuickMeds</h4>
 									<p>An experimental concept of providing a smarter and more efficient way to contact with emergency medical services in extreme situations.</p>
 								</a>
@@ -129,14 +126,12 @@
 					</div>
 					<div class="wow fadeIn" data-wow-delay="0.5s">
 						<h3>School/Personal</h3>
-						<hr>
 					</div>
 					<div class="row"> 
 						<div class="col-md-4 wow fadeIn" data-wow-delay="0.2s">
 							<div class="project shadow">
-								<a href="https://github.com/AaronZhang314/CodingBuddies" target="_blank"">
+								<a href="https://aaronzhang314.github.io/CodingBuddies/index.html" target="_blank"">
 									<img src="images/coding.png" class="img-fluid">
-									<hr>
 									<h4>Coding Buddies</h4>
 									<p>A learning resource that teaches Python for younger programmers.</p>
 								</a>
@@ -146,7 +141,6 @@
 							<div class="project shadow">
 								<a href="https://github.com/AaronZhang314/ShapeFriends-Pygame" target="_blank">
 									<img src="images/jump.png" class="img-fluid">
-									<hr>
 									<h4>Shape Friends Pygame</h4>
 									<p>A platformer made in Pygame (Python) where you go on an adventure to rescue your kidnapped friends!</p>
 								</a>
@@ -156,7 +150,6 @@
 							<div class="project shadow">
 								<a href="https://github.com/AaronZhang314/ICS-3UO-Project" target="_blank">
 									<img src="images/minesweeper.png" class="img-fluid">
-									<hr>
 									<h4>Minesweeper (C++)</h4>
 									<p>A recreation of the classic game, Minesweeper, played in the C++ console.</p>
 								</a>
@@ -194,7 +187,6 @@
 	<div style="padding-bottom: 450px">
 	</div>
 	<footer class="container copyright">
-    	<hr>
     	<p><a id="imageLink" href="https://wallpapersite.com/nature/poon-hill-ghorepani-mountains-nepal-sunset-4k-16729.html">Image Source</a></p>
     </footer>
 	
