--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 						<div class="col-md-8 wow fadeIn" data-wow-delay="0.5s">
 							<h2>A Little About Me!</h2>
 							<hr class="headerLine blueHr wow slideInLeft">
-							<p>Hi, I am Aaron Zhang! Currently I am a Grade 12 student attending Glenforest Secondary School.</p>
-							<h4>Grocery List</h4>
-							<ul>
-								<li>Bananana - to make smoothies</li>
-								<li>Sushi - my favourite</li>
-								<li>Sharujan</li>
-								<li>More filler text to see if format is nice</li>
-							</ul>
+							<p>Hi, I am Aaron Zhang! Currently I am a Grade 12 student attending Glenforest Secondary School. Thanks for visiting my website!</p>
+							<br>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</i></p>
 							
 							<!--
 							<h4>Music</h4>
@@ -96,7 +96,7 @@
 						<h3>Hackathons</h3> 
 					</div>
 					<div class="row">
-						<div class="col-md-4 wow fadeIn" data-wow-delay="0.2s">
+						<div class="col-md-4 wow fadeIn colEqualHeight" data-wow-delay="0.2s">
 							<div class="project shadow">
 								<a href="https://devpost.com/software/xchange-agjw38" target="_blank">
 									<img src="images/north.png" class="img-fluid">
@@ -105,7 +105,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col-md-4 wow fadeIn" data-wow-delay="0.4s">
+						<div class="col-md-4 wow fadeIn colEqualHeight" data-wow-delay="0.4s">
 							<div class="project shadow">
 								<a href="https://devpost.com/software/snow-day-alarm" target="_blank">
 									<img src="images/hammer.jpg" class="img-fluid">
@@ -114,7 +114,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="col-md-4 wow fadeIn" data-wow-delay="0.6s">
+						<div class="col-md-4 wow fadeIn colEqualHeight" data-wow-delay="0.6s">
 							<div class="project shadow">
 								<a href="https://devpost.com/software/quick-meds" target="_blank">
 									<img src="images/wolf.png" class="img-fluid">
@@ -128,7 +128,7 @@
 						<h3>School/Personal</h3>
 					</div>
 					<div class="row"> 
-						<div class="col-md-4 wow fadeIn" data-wow-delay="0.2s">
+						<div class="col-md-4 wow fadeIn colEqualHeight" data-wow-delay="0.2s">
 							<div class="project shadow">
 								<a href="https://aaronzhang314.github.io/CodingBuddies/index.html" target="_blank"">
 									<img src="images/coding.png" class="img-fluid">
@@ -137,16 +137,16 @@
 								</a>
 							</div>
 						</div> 
-						<div class="col-md-4 wow fadeIn" data-wow-delay="0.4s">
+						<div class="col-md-4 wow fadeIn colEqualHeight" data-wow-delay="0.4s">
 							<div class="project shadow">
-								<a href="https://github.com/AaronZhang314/ShapeFriends-Pygame" target="_blank">
-									<img src="images/jump.png" class="img-fluid">
-									<h4>Shape Friends Pygame</h4>
-									<p>A platformer made in Pygame (Python) where you go on an adventure to rescue your kidnapped friends!</p>
+								<a href="https://github.com/AaronZhang314/SlimeTime" target="_blank">
+									<img src="images/slime.png" class="img-fluid">
+									<h4>Slime Time</h4>
+									<p>A shooter game inspired by Bubble Trouble - a childhood favourite</p>
 								</a>
 							</div>
 						</div>
-						<div class="col-md-4 wow fadeIn" data-wow-delay="0.6s">
+						<div class="col-md-4 wow fadeIn colEqualHeight" data-wow-delay="0.6s">
 							<div class="project shadow">
 								<a href="https://github.com/AaronZhang314/ICS-3UO-Project" target="_blank">
 									<img src="images/minesweeper.png" class="img-fluid">
@@ -160,12 +160,34 @@
 					<div id="volunteer" class="wow fadeIn" data-wow-delay="0.5s">
 						<h2>Volunteering</h2>
 						<hr class="headerLine orangeHr wow slideInLeft">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+						<h4>Coding Buddies</h4>
+						<ul>
+							<li>Introducing programming (in Python) to middle school students at Glenhaven</li>
+							<ul>
+								<li>Weekly lessons every wednesday at lunch</li>
+								<li>Teaching Basic functions (print, if/else, while loops, for loops, lists</li>
+								<li>Creating a lesson plan as well as problems that prepare them for future competitions (CCC)</li>
+							</ul>
+							<li>Creating a website to help strengthen their understanding as well as an online judge (using Repl Classroom) to help them learn at home</li>
+						</ul>
+						<br>
+						<h4>Vacation Bible School</h4>
+						<ul>
+							<li>Taking part in my church's (MCCC) very first VBS event</li>
+							<li>Leading children of all ages through a week of fun-filled activities and introducing many to Christ</li>
+							<ul class="sideBySide">
+								<li>Music worship</li>
+								<li>Games</li>
+								<li>Crafts</li>
+							</ul>
+							<ul class="sideBySide">
+								<li>Lesson Time</li>
+								<li>Snacks/Lunch</li>
+								<li>Preparing and rehearsing a skit</li>
+							</ul>
+							<li>Providing encouragement and making sure that everyone is involved</li>
+							<li>Meetings after each day to discuss areas of improvement and making adjustments to overcome a variety of challenges</li>
+						</ul>
 					</div>
 					<div style="margin-bottom: 300px">
 					</div>
