--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 								<a href="https://devpost.com/software/xchange-agjw38" target="_blank">
 									<img src="images/north.png" class="img-fluid">
 									<h4>XChange</h4>
-									<p>A website helps travelers to track their budget by converting any currency into their native currency and locates best exchange station rates in the area using crowd-sourced data.</p>
+									<p>A website helps travelers to track their budget by converting any currency into their native currency  and locates best exchange station rates in the area using crowd-sourced data.</p>
 								</a>
 							</div>
 						</div>
@@ -175,6 +175,7 @@
 						<ul>
 							<li>Taking part in my church's (MCCC) very first VBS event</li>
 							<li>Leading children of all ages through a week of fun-filled activities and introducing many to Christ</li>
+							<li>Schedule comprised of:</li>
 							<ul class="sideBySide">
 								<li>Music worship</li>
 								<li>Games</li>
