--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
 		        <li class="nav-item">
 		          <a id="navVolunteer" class="nav-link" href="#volunteer">Volunteering</a>
 		        </li>
+		        <!--
 		        <li class="nav-item">
 		          <a id="navMore" class="nav-link" href="#more">More Info</a>
 		        </li>
+		    -->
 		      </ul>
 		    </nav>
 		    <div class="col-md-10">
@@ -65,14 +67,7 @@
 						<div class="col-md-8 wow fadeIn" data-wow-delay="0.5s">
 							<h2>A Little About Me!</h2>
 							<hr class="headerLine blueHr wow slideInLeft">
-							<p>Hi, I am Aaron Zhang! Currently I am a Grade 12 student attending Glenforest Secondary School. Thanks for visiting my website!</p>
-							<br>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</i></p>
+							<p>Hi, I am Aaron Zhang! Currently, I am a Grade 12 student attending Glenforest Secondary School. My passion for software development has grown over the recent years as I love to express my creativity through a variety of projects, such as developing games, designing websites, and tackling real-world issues at hackathons.</p>
 							
 							<!--
 							<h4>Music</h4>
@@ -162,53 +157,46 @@
 						<hr class="headerLine orangeHr wow slideInLeft">
 						<h4>Coding Buddies</h4>
 						<ul>
-							<li>Introducing programming (in Python) to middle school students at Glenhaven</li>
+							<li>Introduced programming (in Python) to middle school students at Glenhaven</li>
 							<ul>
 								<li>Weekly lessons every wednesday at lunch</li>
-								<li>Teaching Basic functions (print, if/else, while loops, for loops, lists</li>
-								<li>Creating a lesson plan as well as problems that prepare them for future competitions (CCC)</li>
+								<li>Taught the fundamental principles of programming</li>
+								<li>Created a lesson plan as well as problems that prepare them for future competitions (CCC)</li>
 							</ul>
-							<li>Creating a website to help strengthen their understanding as well as an online judge (using Repl Classroom) to help them learn at home</li>
+							<li>Created a website to help strengthen their understanding as well as an online judge (using Repl Classroom) as an aid for learning at home</li>
 						</ul>
 						<br>
-						<h4>Vacation Bible School</h4>
-						<ul>
-							<li>Taking part in my church's (MCCC) very first VBS event</li>
-							<li>Leading children of all ages through a week of fun-filled activities and introducing many to Christ</li>
-							<li>Schedule comprised of:</li>
-							<ul class="sideBySide">
-								<li>Music worship</li>
-								<li>Games</li>
-								<li>Crafts</li>
-							</ul>
-							<ul class="sideBySide">
-								<li>Lesson Time</li>
-								<li>Snacks/Lunch</li>
-								<li>Preparing and rehearsing a skit</li>
-							</ul>
-							<li>Providing encouragement and making sure that everyone is involved</li>
-							<li>Meetings after each day to discuss areas of improvement and making adjustments to overcome a variety of challenges</li>
-						</ul>
+						<div class="row">
+							<div class="col-lg-7">
+								<h4>Vacation Bible School</h4>
+								<ul>
+									<li>Helped in organising my church's (MCCC) first VBS event</li>
+									<li>Developed leadership skills through leading children of all ages through a week of fun-filled activities and introduced many to Christ</li>
+									<li>Improved the ability to remain patient and calm under stressful situations</li>
+									<li>Discussed areas of improvement and made adjustments to overcome a variety of challenges</li>
+								</ul>
+							</div>
+							<div class="col-lg">
+								<img src="images/vbs.png" class="center">
+							</div>
+
+						</div>
+						
 					</div>
-					<div style="margin-bottom: 300px">
-					</div>
-					<div id="more" class="wow fadeIn" data-wow-delay="0.5s" style="padding-bottom:100px">
+					<!--
+					<div id="more" class="wow fadeIn" data-wow-delay="0.5s" style="padding-bottom:150px">
 						<h2>More Information</h2>
 						<hr class="headerLine greenHr wow slideInLeft">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p>Thanks for visiting my website</p>
 
 					</div>
+				-->
+
 				</div>
 			</div>
 		</div>
 	</div>
-	<div style="padding-bottom: 450px">
-	</div>
+	<div style="padding-bottom: 120px"></div>
 	<footer class="container copyright">
     	<p><a id="imageLink" href="https://wallpapersite.com/nature/poon-hill-ghorepani-mountains-nepal-sunset-4k-16729.html">Image Source</a></p>
     </footer>
