Coding Buddies Description Edit

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 								<li>Taught the fundamental principles of programming</li>
 								<li>Created a lesson plan as well as problems that prepare them for future competitions (CCC)</li>
 							</ul>
-							<li>Created a website to help strengthen their understanding as well as an online judge (using Repl Classroom) as an aid for learning at home</li>
+							<li>Created a website to help strengthen their understanding as well as an online judge (using Repl Classroom) to help with learning at home</li>
 						</ul>
 						<br>
 						<div class="row">
