--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<div class="col-md-8 wow fadeIn" data-wow-delay="0.5s">
 							<h2>A Little About Me!</h2>
 							<hr class="headerLine blueHr wow slideInLeft">
-							<p>Hi, I am Aaron Zhang! Currently, I am a Grade 12 student attending Glenforest Secondary School. My passion for software development has grown over the recent years as I love to express my creativity through a variety of projects, such as developing games, designing websites, and tackling real-world issues at hackathons.</p>
+							<p>Hi, I am Aaron Zhang! Currently, I am a first-year student attending the University of Toronto (St. George) for Computer Science. My passion for software development has grown over the recent years as I love to express my creativity through a variety of projects, such as developing games, designing websites, and tackling real-world issues at hackathons.</p>
 							
 							<!--
 							<h4>Music</h4>
